--- a/book/scss/_typography.scss
+++ b/book/scss/_typography.scss
@@ -6,8 +6,8 @@ $base-font-size: 18px;
 $base-line-height: 24px;
 
 // Typography
-// $font-fancy: "blue-goblet-alt";
-// $font-fancy-bold: "700";
+$font-fancy: "blue-goblet-alt";
+$font-fancy-bold: "700";
 
 $font-slab: "hellenic-wide";
 
