--- a/talk/themes/style/profesh.css
+++ b/talk/themes/style/profesh.css
@@ -1,289 +1,190 @@
-@font-face {
-  font-family: 'OstrichSansBlack';
-  src: url("http://fonts.rachelnabors.com/ostrich-black-webfont.eot");
-  src: url("http://fonts.rachelnabors.com/ostrich-black-webfont.eot?#iefix") format("embedded-opentype"), url("http://fonts.rachelnabors.com/ostrich-black-webfont.woff") format("woff"), url("http://fonts.rachelnabors.com/ostrich-black-webfont.ttf") format("truetype"), url("http://fonts.rachelnabors.com/ostrich-black-webfont.svg#OstrichSansBlack") format("svg");
-  font-weight: normal;
-  font-style: normal; }
+::-moz-selection {
+  background: #a22782;
+  color: #fff; }
 
-@font-face {
-  font-family: 'OstrichSansMedium';
-  src: url("http://fonts.rachelnabors.com/ostrich-regular-webfont.eot");
-  src: url("http://fonts.rachelnabors.com/ostrich-regular-webfont.eot?#iefix") format("embedded-opentype"), url("http://fonts.rachelnabors.com/ostrich-regular-webfont.woff") format("woff"), url("http://fonts.rachelnabors.com/ostrich-regular-webfont.ttf") format("truetype"), url("http://fonts.rachelnabors.com/ostrich-regular-webfont.svg#OstrichSansMedium") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-.deck-container .self-portrait figcaption {
-  display: block;
-  text-indent: -999em;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  text-align: left;
-  direction: ltr; }
+::selection {
+  background: #a22782;
+  color: #fff; }
 
 .deck-container {
-  font-family: franklin-gothic-urw, sans-serif;
+  background: #cccccc url(../../img/bg_argyle.png);
+  color: #00232b;
+  font-family: "nueva-std-extended", sans-serif;
   font-weight: 400;
-  font-size: 1.75em;
-  background: #cccccc url(../../img/bg_pinstripe.png); }
-  .deck-container .self-portrait, .deck-container .talk-title {
-    margin-top: 3em; }
-  .deck-container .self-portrait {
-    width: 33.33333%;
-    float: left; }
-    .deck-container .self-portrait img {
-      max-width: 100%;
-      margin: 0 auto; }
-    .deck-container .self-portrait figcaption {
-      background-image: url(../../img/logo.png);
-      margin: 0 auto;
-      width: 264px;
-      height: 117px; }
-  .deck-container .talk-title {
-    float: right;
-    width: 64.44444%; }
-    .deck-container .talk-title h1 {
-      font-size: 3em !important;
-      margin: 0; }
-    .deck-container .talk-title h2 {
-      border: 0;
-      padding: 0; }
-  .deck-container .slide {
-    color: #3C3C3C; }
-    .deck-container .slide h1, .deck-container .slide h2, .deck-container .slide h3, .deck-container .slide h4, .deck-container .slide h5, .deck-container .slide h6 {
-      font-weight: normal;
-      text-align: left; }
-    .deck-container .slide h1 {
-      font-family: "OstrichSansBlack", sans-serif;
-      font-size: 4em;
-      font-weight: normal;
-      margin-top: 1em;
-      position: relative;
-      top: auto;
-      padding: 0;
-      -webkit-transform: none;
-      -moz-transform: none;
-      -ms-transform: none;
-      -o-transform: none;
-      transform: none; }
-      .deck-container .slide h1.vcenter {
-        margin: 0; }
-    .deck-container .slide .vtop .slide-title {
-      font-family: "OstrichSansMedium", sans-serif;
-      font-size: 4em;
-      font-weight: normal;
-      color: #dfeff6;
-      box-sizing: border-box;
-      background: rgba(20, 31, 49, 0.5);
-      border: 0;
-      margin: 0;
-      padding: .25em .25em;
-      position: absolute;
-      top: 0;
-      left: 0;
-      text-shadow: 0px 1px 3px rgba(20, 31, 49, 0.6);
-      -webkit-transform: none;
-      -moz-transform: none;
-      -ms-transform: none;
-      -o-transform: none;
-      transform: none;
-      width: 100%; }
-    .deck-container .slide .vtop .slide-tagline {
-      color: #dfeff6;
-      background: rgba(20, 31, 49, 0.5);
-      box-sizing: border-box;
-      font-size: 2em;
-      text-shadow: 0px 1px 3px rgba(20, 31, 49, 0.6);
-      margin: 0;
-      left: 0;
-      position: absolute;
-      padding: 0 .5em;
-      bottom: 0;
-      width: 100%; }
-      .deck-container .slide .vtop .slide-tagline small {
-        font-size: .25em;
-        font-style: italic;
-        display: block; }
-    .deck-container .slide .vcenter h1, .deck-container .slide .vcenter h2, .deck-container .slide .vcenter .tagline {
-      margin: 0;
-      padding: 0; }
-    .deck-container .slide .vcenter h2, .deck-container .slide .vcenter .tagline {
-      border: 0;
-      border-top: 3px solid #888;
-      font-size: 3em;
-      padding-top: .25em;
-      text-align: left; }
-    .deck-container .slide .vcenter blockquote {
-      border: 0; }
-      .deck-container .slide .vcenter blockquote cite {
-        color: #fff; }
-    .deck-container .slide h2, .deck-container .slide .tagline {
-      font-family: "OstrichSansMedium", sans-serif;
-      border-bottom-color: #858585;
-      line-height: .8em; }
-    .deck-container .slide h2 {
-      font-size: 1.5em;
-      margin-bottom: .25em; }
-    .deck-container .slide h3 {
-      font-family: "OstrichSansBlack", sans-serif;
-      color: #888; }
-    .deck-container .slide h4 {
-      margin-top: 2em; }
-    .deck-container .slide pre {
-      border-color: #858585; }
-      .deck-container .slide pre em {
-        color: #e64988; }
-    .deck-container .slide code {
-      color: #888; }
-    .deck-container .slide figure {
-      margin-bottom: 1em;
-      text-align: center; }
-    .deck-container .slide figcaption {
-      font-style: italic; }
-    .deck-container .slide blockquote {
-      font-size: 2em;
-      font-style: italic;
-      padding: 1em 2em;
-      color: #000;
-      border-left: 5px solid #858585; }
-      .deck-container .slide blockquote p {
-        margin: 0; }
-      .deck-container .slide blockquote cite {
-        font-size: .5em;
-        font-style: normal;
-        font-weight: bold;
-        color: #888;
-        display: block;
-        text-align: right; }
-        .deck-container .slide blockquote cite:before {
-          content: "\2014"; }
-    .deck-container .slide ::-moz-selection {
-      background: #a52469;
-      color: #fff; }
-    .deck-container .slide ::selection {
-      background: #a52469;
-      color: #fff; }
-    .deck-container .slide a {
-      border-bottom: 1px dotted #1cceff;
-      padding: 1px 1px 0 1px;
-      text-decoration: none; }
-    .deck-container .slide a:link {
-      color: #1cceff; }
-    .deck-container .slide a:visited {
-      border-color: #0097c0;
-      color: #0097c0; }
-    .deck-container .slide a:hover, .deck-container .slide a:active {
-      color: #313b02;
-      background: #d6e549;
-      border: 0; }
-  .deck-container > .slide .deck-before, .deck-container > .slide .deck-previous {
-    opacity: 0.4; }
-    .deck-container > .slide .deck-before:not(.deck-child-current) .deck-before, .deck-container > .slide .deck-before:not(.deck-child-current) .deck-previous, .deck-container > .slide .deck-previous:not(.deck-child-current) .deck-before, .deck-container > .slide .deck-previous:not(.deck-child-current) .deck-previous {
-      opacity: 1; }
-  .deck-container > .slide .deck-child-current {
+  font-size: 1.75em; }
+  .deck-container a {
+    border-bottom: 1px dotted #1cceff;
+    padding: 1px 1px 0 1px;
+    text-decoration: none; }
+  .deck-container a:link {
+    color: #1cceff; }
+  .deck-container a:visited {
+    border-color: #0097c0;
+    color: #0097c0; }
+  .deck-container a:hover, .deck-container a:active {
+    color: #73ebc5;
+    background: #20b3aa;
+    border: 0; }
+  .deck-container .slide .slide .deck-before, .deck-container .slide .slide .deck-previous {
+    opacity: .4; }
+  .deck-container .slide .slide .deck-child-current {
     opacity: 1; }
-  .deck-container .cover .vcenter {
-    color: #dfeff6;
-    background: rgba(20, 31, 49, 0.5);
-    box-sizing: border-box;
-    padding: .5em 48px 1em;
-    text-shadow: 0px 1px 3px rgba(20, 31, 49, 0.6);
-    line-height: 3em; }
-  .deck-container .cover .vcenter em, .deck-container .cover .vtop em {
-    font-style: normal;
-    display: block;
-    font-family: franklin-gothic-urw, sans-serif;
-    font-weight: 400;
-    font-size: .4em; }
-  .deck-container .cover .vtop em {
-    font-size: .3em;
-    line-height: 0; }
-  .deck-container .cover a:link, .deck-container .cover a:visited, .deck-container .cover a:hover, .deck-container .cover a:active {
-    color: #82e4ff; }
-  .deck-container .cover a:hover, .deck-container .cover a:active {
-    background: #141f31; }
-  .deck-container .deck-prev-link, .deck-container .deck-next-link {
-    background: #858585;
+  .deck-container .slide .slide .deck-prev-link, .deck-container .slide .slide .deck-next-link {
+    background: #4e6369;
     font-family: serif; }
-    .deck-container .deck-prev-link, .deck-container .deck-prev-link:hover, .deck-container .deck-prev-link:focus, .deck-container .deck-prev-link:active, .deck-container .deck-prev-link:visited, .deck-container .deck-next-link, .deck-container .deck-next-link:hover, .deck-container .deck-next-link:focus, .deck-container .deck-next-link:active, .deck-container .deck-next-link:visited {
-      color: #fff; }
-    .deck-container .deck-prev-link:hover, .deck-container .deck-prev-link:focus, .deck-container .deck-next-link:hover, .deck-container .deck-next-link:focus {
-      background: #e64988;
-      text-decoration: none; }
   .deck-container .deck-status {
     font-size: 0.6666em; }
-  .deck-container.deck-menu .slide {
+  .deck-container .deck-menu .slide {
     background: #eee; }
-  .deck-container.deck-menu .deck-current, .no-touch .deck-container.deck-menu .slide:hover {
+  .deck-container .deck-menu .deck-current, .no-touch .deck-container .deck-menu .slide:hover {
     background: #ddf; }
+  .deck-container .deck-menu .deck-container:not(.deck-menu) .slide.deck-horizon {
+    display: none; }
+  .deck-container .vtop {
+    color: #dbf5f1;
+    box-sizing: border-box;
+    background: rgba(0, 35, 43, 0.5);
+    padding: 0 .5em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-shadow: 0px 1px 3px rgba(0, 35, 43, 0.6);
+    width: 100%; }
+  .deck-container .vbottom {
+    color: #dbf5f1;
+    background: rgba(0, 35, 43, 0.5);
+    box-sizing: border-box;
+    left: 0;
+    padding: 0 .5em;
+    position: absolute;
+    bottom: 0;
+    text-shadow: 0px 1px 3px rgba(0, 35, 43, 0.6);
+    width: 100%; }
+  .deck-container .vtop a:hover, .deck-container .vtop a:focus, .deck-container .vtop a:active, .deck-container .vtop a:visited, .deck-container .vbottom a:hover, .deck-container .vbottom a:focus, .deck-container .vbottom a:active, .deck-container .vbottom a:visited {
+    color: #fff; }
+  .deck-container .vtop a:hover, .deck-container .vtop a:focus, .deck-container .vbottom a:hover, .deck-container .vbottom a:focus {
+    background: #fc0082;
+    text-decoration: none; }
+  .deck-container .slide_cover .section-title {
+    border: #f090b1 2px dashed;
+    border-right: 0;
+    border-left: 0;
+    font-family: "blue-goblet-alt", fancy;
+    font-size: 2.5em;
+    padding: 0.25em; }
+  .deck-container .slide_cover .vcenter.title-card {
+    background: #a22782;
+    color: #ffeef4;
+    padding: 3em; }
+  .deck-container .slide_interjection .statement {
+    font-family: "hellenic-wide", serif;
+    font-size: 2em;
+    padding: .25em; }
+  .deck-container .slide_interjection .small-voice {
+    font-size: .75em;
+    font-style: italic;
+    margin-top: -1em; }
+    .deck-container .slide_interjection .small-voice span {
+      padding: 1em;
+      border-top: #f090b1 2px dashed; }
+  .deck-container .slide_interjection .vcenter.card {
+    background: #431236;
+    color: #ffeef4;
+    padding: 3em; }
+  .deck-container .slide_texty .slide-content pre {
+    border-color: #4e6369; }
+    .deck-container .slide_texty .slide-content pre em {
+      color: #fc0082; }
+  .deck-container .slide_texty .slide-content code {
+    color: #888; }
+  .deck-container .slide_texty .slide-content figure {
+    margin-bottom: 1em;
+    text-align: center; }
+  .deck-container .slide_texty .slide-content figcaption {
+    font-style: italic; }
+  .deck-container .slide_texty .slide-content blockquote {
+    font-size: 2em;
+    font-style: italic;
+    padding: 1em 2em;
+    color: #000;
+    border-left: 5px solid #4e6369; }
+    .deck-container .slide_texty .slide-content blockquote p {
+      margin: 0; }
+    .deck-container .slide_texty .slide-content blockquote cite {
+      font-size: .5em;
+      font-style: normal;
+      font-weight: bold;
+      color: #888;
+      display: block;
+      text-align: right; }
+      .deck-container .slide_texty .slide-content blockquote cite:before {
+        content: "\2014"; }
+  .deck-container .slide_topical .slide-tagline {
+    font-size: 2em;
+    font-weight: 400;
+    margin: 0; }
+    .deck-container .slide_topical .slide-tagline small {
+      font-size: .25em;
+      font-style: italic;
+      display: block; }
+  .deck-container .slide-title {
+    font-family: "blue-goblet-alt", fancy;
+    font-size: 4em;
+    font-weight: normal;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    transform: none; }
 
-.cover.disney {
-  background: url(../../img/cover_disney.jpg) no-repeat 0 25%;
-  background-size: cover; }
-
-.cover.iwerks {
-  background: url(../../img/cover_iwerks.png) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.technology {
-  background: url(../../img/cover_technology.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.tezuka {
-  background: url(../../img/cover_tezuka.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.hanna {
-  background: url(../../img/cover_hanna.jpg) no-repeat center center;
-  background-size: cover; }
-
-.cover.miyazaki {
-  background: url(../../img/cover_miyazaki.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.quote-disney {
-  background: url(../../img/quote_disney.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.z-axis {
-  background: url(../../img/cover_zaxis.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.skeuomorphism {
-  background: white url(../../img/cover_skeuomorphism.png) no-repeat center center;
-  background-size: cover; }
-
-.cover.cinematic {
-  background: url(../../img/cover_cinematic.png) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.modeling {
-  background: url(../../img/cover_model.png) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.storyboard {
-  background: url(../../img/cover_storyboards.jpg) no-repeat 0 0;
-  background-size: cover; }
-
-.cover.timing-functions {
-  background: url(../../img/cover_easing.png) no-repeat 0 0;
-  background-size: cover;
-  color: #d6e549; }
-
-.cover.scene-transitions {
-  background: black url(../../img/cover_transitions.png) no-repeat center center;
+#original-alice {
+  background: white url(../../img/topic_alice-org.jpg) no-repeat center center;
   background-size: auto 100%; }
 
-.cover.walk-cycle {
-  background: url(../../img/cover_walk-cycle.png) no-repeat center center;
+#blair-alice {
+  background: white url(../../img/topic_alice-blair.jpg) no-repeat center center;
   background-size: cover; }
 
-.cover.cut-outs {
-  background: url(../../img/cover_cutouts.jpg) no-repeat center center;
+#movie-alice {
+  background: white url(../../img/topic_alice-movie.jpg) no-repeat center center;
   background-size: cover; }
 
-.cover.parallax {
-  background: black url(../../img/cover_parallax.jpg) no-repeat center center;
-  background-size: auto 100%; }
+#game-alice {
+  background: white url(../../img/topic_alice-game.jpg) no-repeat center center;
+  background-size: cover; }
 
-.deck-container:not(.deck-menu) .slide.deck-horizon {
-  display: none; }
+#manga-alice {
+  background: white url(../../img/topic_alice-manga.jpg) no-repeat 0 0;
+  background-size: cover; }
+
+#comic-alice {
+  background: white url(../../img/topic_alice-comics.jpg) no-repeat 0 25%;
+  background-size: cover; }
+
+#real-alice {
+  background: white url(../../img/topic_alice-real.jpg) no-repeat 100% 100%;
+  background-size: cover; }
+
+#setting-park {
+  background: url(../../img/topic_park.jpg) no-repeat center center;
+  background-size: cover; }
+
+#setting-hole {
+  background: url(../../img/topic_hole.png) no-repeat center center;
+  background-size: cover; }
+
+#chara-sister {
+  background: url(../../img/chara_denise.jpg) no-repeat center center;
+  background-size: cover; }
+
+#chara-rabbit {
+  background: url(../../img/chara_rabbit.jpg) no-repeat 0 0;
+  background-size: cover; }
+
+#chara-alice {
+  background: url(../../img/chara_alice.jpg) no-repeat 0 0;
+  background-size: cover; }
+
+#storyboard {
+  background: url(../../img/topic_storyboard.jpg) no-repeat 0 25%;
+  background-size: cover; }
